# diffvg

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.frozen.txt  requirements.txt
apps/: test_torch_render.py
cmake/: FindThrust.cmake
diffvg/: __init__.py
pydiffvg/: __init__.py  device.py  parse_svg.py  render_pytorch.py  torch_render.py
