[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "diffvg"
version = "0.0.1"
description = "Differentiable Vector Graphics"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scikit-image",
    "svgwrite",
    "svgpathtools",
    "cssutils",
    "numba",
    "visdom @ git+https://github.com/Jayantparashar10/visdom@fix/pkg-resources-python312",
    "torch-tools",
    "matplotlib",
    "seaborn",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["pydiffvg"]
