[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pydiffvg"]

[project]
name = "diffvg"
version = "0.0.1"
description = "Differentiable Vector Graphics"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scikit-image",
    "svgwrite",
    "svgpathtools",
    "cssutils",
    "numba",
    "visdom @ git+https://github.com/Jayantparashar10/visdom@fix/pkg-resources-python312",
    "torch-tools",
    "matplotlib",
    "seaborn",
]
